--- a/references.bib
+++ b/references.bib
@@ -1974,11 +1974,22 @@
 }
 
 @Article{	  lin2013,
-  title		= {Monoidify! monoids as a design principle for efficient
+  title		= {Monoidify! Monoids as a design principle for efficient
 		  mapreduce algorithms},
   author	= {Lin, Jimmy},
   journal	= {arXiv preprint arXiv:1304.7544},
   year		= {2013}
+}
+
+@article{wilhelm2003,
+  title={User interaction at various levels of data displays},
+  author={Wilhelm, Adalbert},
+  journal={Computational statistics \& data analysis},
+  volume={43},
+  number={4},
+  pages={471--494},
+  year={2003},
+  publisher={Elsevier}
 }
 
 @Article{	  lisnic2024,
@@ -4110,6 +4121,43 @@
   author	= {Wilkinson, Leland},
   year		= {2012},
   publisher	= {Springer}
+}
+
+@article{quint2003,
+  title={Scalable vector graphics},
+  author={Quint, Antoine},
+  journal={IEEE MultiMedia},
+  volume={10},
+  number={3},
+  pages={99--102},
+  year={2003},
+  publisher={IEEE}
+}
+
+@article{beatty1983,
+  title={Raster graphics and color},
+  author={Beatty, John C},
+  journal={The American Statistician},
+  volume={37},
+  number={1},
+  pages={60--75},
+  year={1983},
+  publisher={Taylor \& Francis}
+}
+
+@book{foley1996,
+  title={Computer graphics: principles and practice},
+  author={Foley, James D},
+  volume={12110},
+  year={1996},
+  publisher={Addison-Wesley Professional}
+}
+
+@book{shirley2009,
+  title={Fundamentals of computer graphics},
+  author={Shirley, Peter and Ashikhmin, Michael and Marschner, Steve},
+  year={2009},
+  publisher={AK Peters/CRC Press}
 }
 
 @Misc{		  will2016,
